--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "vercel --prod"
-
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.3.4",
